# YOK_Akademik_MCP

./: .dockerignore  .gitignore  DEPLOYMENT.md  DEPLOYMENT_SUMMARY.md  Dockerfile  MCP_2025_MIGRATION.md  README.md  SMITHERY_DEBUG.md  SMITHERY_DEPLOY.md  SMITHERY_DEPLOYMENT_ANALYSIS.md  SMITHERY_FIX.md  config.env  flask_server.py  health_check.py  mcp_adapter.py  mcp_server_streaming_real.py  minimal_server.py  pyproject.toml  requirements.txt  server.py  simple_mcp_server.py  simple_server.py  smithery.yaml  smithery.yml  start.sh  test_real_scraping_mcp.py  test_server.py  ultra_simple.py  wsgi_server.py
config/: __init__.py  config.py
public/: fields.json
src/: main.py  middleware.py  simple_server.py
src/core/: mcp_orchestrator.py
src/tools/: __init__.py  scrape_collaborators.py  scrape_main_profile.py
