[project]
name = "yok-akademik-mcp"
version = "3.0.0"
description = "YÖK Akademik Asistanı - MCP Server"
authors = [
    {name = "utkucaglar"}
]
requires-python = ">=3.11"
dependencies = [
    "uvicorn>=0.15.0",
    "aiohttp>=3.9.1",
    "requests>=2.31.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []
